--- a/index.html
+++ b/index.html
@@ -1,19 +1,13 @@
 ---
 layout: home
 title: Home-lzy
+description: Blog for jekyll
 ---
 
-<!DOCTYPE html>
-<html lang="en">
+<ul>
 
-<!-- hack iOS CSS :active style -->
-<body ontouchstart="">
-  <ul>
-    {% for post in site.posts %}
-        <li>{{ post.date | date_to_string }} <a href="{{ site.baseurl }}{{ post.url }}">{{ post.title }}</a></li>
-    {% endfor %}
-　</ul>
+  {% for post in site.posts %}
+      <li>{{ post.date | date_to_string }} <a href="{{ site.baseurl }}{{ post.url }}">{{ post.title }}</a></li>
+  {% endfor %}
 
-</body>
-
-</html>
+</ul>
